# KubeOS

./: .gitignore  0001-KubeOS-modify-checks-in-generate.sh-and-change-modul.patch  0001-Write-a-tool-to-support-KubeOS-deployment-on-physica.patch  0001-argumentchange.patch  0002-KubeOS-fix-the-kbimg.sh-exception-and-pxe-installati.patch  0002-change-generate-argument-from-isopath-to-repopath.patch  0003-KubeOS-add-arm-architecture-support-to-the-OS-image.patch  0003-KubeOS-fixed-the-issue-of-VMs-images-and-add-check-o.patch  0004-KubOS-increase-the-space-of-the-boot-partition.patch  0004-KubeOS-add-the-clearing-of-space-before-the-upgrade-.patch  0004-KubeOS-increase-the-space-of-the-boot-partition.patch  0005-KubeOS-add-the-configuration-of-etc-resolv.conf-and-.patch  0005-KubeOS-fix-sshd-startup-failed.patch  0006-KubeOS-remove-grub2-legacy-install-add-error-handlin.patch  0007-KubeOS-fix-usage-does-not-print-when-an-error-occurs.patch  Cargo.toml  KubeOS.spec  KubeOS.yaml  Makefile  README.en.md  README.md  README_EN.md  fix-undefined-parseCPUInfo.patch  go.mod  go.sum  rustfmt.toml
KubeOS-Rust/: Cargo.toml  rustfmt.toml
KubeOS-Rust/agent/: Cargo.toml
KubeOS-Rust/agent/src/: function.rs  main.rs
KubeOS-Rust/agent/src/rpc/: agent.rs  agent_impl.rs  mod.rs
KubeOS-Rust/cli/: Cargo.toml
KubeOS-Rust/cli/src/: client.rs  lib.rs
KubeOS-Rust/cli/src/method/: callable_method.rs  cleanup.rs  configure.rs  mod.rs  prepare_upgrade.rs  request.rs  rollback.rs  upgrade.rs
KubeOS-Rust/common/: Cargo.toml
KubeOS-Rust/common/src/: apiclient.rs  lib.rs  mock_os_and_osi.rs  values.rs
KubeOS-Rust/kbimg/: Cargo.toml  kbimg.toml
KubeOS-Rust/kbimg/src/: admin_container.rs  commands.rs  custom.rs  docker_img.rs  main.rs  repo.rs  scripts_gen.rs  utils.rs  values.rs
KubeOS-Rust/manager/: Cargo.toml
KubeOS-Rust/manager/src/: lib.rs
KubeOS-Rust/manager/src/api/: agent_status.rs  mod.rs  types.rs
KubeOS-Rust/manager/src/sys_mgmt/: config.rs  containerd_image.rs  disk_image.rs  docker_image.rs  mod.rs  values.rs
KubeOS-Rust/manager/src/utils/: common.rs  container_image.rs  executor.rs  image_manager.rs  mod.rs  partition.rs
KubeOS-Rust/operator/: Cargo.toml
KubeOS-Rust/operator/src/: main.rs
KubeOS-Rust/operator/src/controller/: apiserver_mock.rs  controller.rs  mod.rs
KubeOS-Rust/proxy/: Cargo.toml
KubeOS-Rust/proxy/src/: drain.rs  main.rs
KubeOS-Rust/proxy/src/controller/: agentclient.rs  apiclient.rs  apiserver_mock.rs  controller.rs  crd.rs  drain.rs  mod.rs  utils.rs  values.rs
KubeOS-Rust/proxy/tests/: drain_test.rs
KubeOS-Rust/proxy/tests/common/: mod.rs
KubeOS-Rust/proxy/tests/setup/: resources.yaml  setup_test_env.sh
License/: Project License  Third Party Open Source Software Notice.md
api/v1alpha1/: groupversion_info.go  os_types.go  zz_generated.deepcopy.go
cmd/admin-container/: main.go
cmd/agent/: Makefile  main.go
cmd/agent/api/: agent.pb.go  agent.proto  agent_grpc.pb.go
cmd/agent/server/: config.go  config_test.go  containerd_image.go  containerd_image_test.go  disk_image.go  disk_image_test.go  docker_image.go  docker_image_test.go  listener.go  listener_test.go  server.go  server_test.go  utils.go  utils_test.go  values.go
cmd/kbimg/: main.go
cmd/kbimg/files/: boot-efi.mount  os-agent.service  os-release
cmd/kbimg/internal/: copy_files.go  kbimg.go  part_create.go  user_config.go  utils.go  verify.go
cmd/kbimg/scripts/: Dockerfile  grub.cfg  kbimg.sh  kbimg.yaml  rpmlist  set_in_chroot.sh
cmd/kbimg/scripts/00bootup/: mount.sh
cmd/kbimg/scripts/common/: log.sh  utils.sh
cmd/kbimg/scripts/create/: imageCreate.sh  rootfsCreate.sh
cmd/operator/: main.go
cmd/operator/controllers/: operation.go  os_controller.go  os_controller_test.go  requirements.go  suite_test.go  times.go
cmd/proxy/: main.go
cmd/proxy/controllers/: os_controller.go  os_controller_test.go  suite_test.go
docs/: quick-start.md
docs/design/: architecture.md  architecture_en.md
docs/example/config/admin-container/: admin-container.yaml
docs/example/config/crd/: upgrade.openeuler.org_os.yaml  upgrade.openeuler.org_osinstances.yaml
docs/example/config/manager/: manager.yaml
docs/example/config/rbac/: role.yaml  role_binding.yaml
docs/example/config/samples/: upgrade_v1alpha1_os.yaml
docs/user_guide/: KubeOS支持ignition和fstab镜像制作指导.md  KubeOS镜像制作指导-binary.md  KubeOS镜像制作指导-scripts.md  dm-verity.md  容器OS镜像制作指导(kbimg-go).md  容器OS镜像制作指导.md
files/: boot-grub2.mount  boot.mount  etc.mount  os-agent.service  persist.mount  var.mount
hack/: boilerplate.go.txt  releasenote.sh
pkg/agentclient/: connection.go
pkg/common/: common.go
pkg/values/: values.go
pkg/version/: version.go
scripts/: Dockerfile  bootloader.sh  create_kubeos_image.sh  generate.sh  grub.cfg  kbimg.sh  rpmlist  set_in_chroot.sh
scripts/00bootup/: 10-mount-etc.sh  Global.cfg  module-setup.sh  mount.sh
scripts/admin-container/: Dockerfile  hostshell  set-ssh-pub-key.service  set-ssh-pub-key.sh  setPasswd.service  setPasswd.sh
scripts/common/: globalVariables.sh  utils.sh
scripts/create/: imageCreate.sh  rootfsCreate.sh
scripts/cve-tools/: README.md  gen_fixed_cve.sh  get_file_from_qcow2.sh  kubeos_cve_compare.py
scripts/initramfs-bootup/: module-setup.sh  persist-mount.service
scripts/security-tools/: security-tools.sh
