[workspace]
members = [
    "KubeOS-Rust/agent",
    "KubeOS-Rust/cli",
    "KubeOS-Rust/kbimg",
    "KubeOS-Rust/manager",
    "KubeOS-Rust/proxy",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MulanPSL-2.0"
version = "1.0.8"

[workspace.dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
clap = { version = "~4.3", default-features = false }
cli = { version = "1.0.7", path = "./KubeOS-Rust/cli" }
env_logger = { version = "~0.10" }
fs2 = { version = "0.4.3" }
futures = { version = "0.3" }
jsonrpc = { version = "~0.13.0", features = ["simple_uds"] }
jsonrpc-core = { version = "18.0" }
jsonrpc-derive = { version = "18.0" }
jsonrpc-ipc-server = { version = "18.0" }
k8s-openapi = { version = "=0.13.1", features = ["v1_22"] }
kube = { version = "=0.66.0", features = ["derive", "runtime"] }
lazy_static = { version = "1.5" }
log = { version = "0.4" }
manager = { version = "1.0.7", path = "./KubeOS-Rust/manager" }
nix = { version = "=0.26.4" }
regex = { version = "~1.9" }
reqwest = { version = "0.12.9", default-features = false }
schemars = { version = "=0.8.21" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
serde_yaml = { version = "0.9.19" }
sha2 = { version = "=0.10.8" }
strfmt = { version = "0.2.4" }
thiserror = { version = "2.0" }
tokio = { version = "~1.38.0", default-features = false }
tokio-retry = { version = "0.3" }
toml = { version = "=0.7.6" }

# dev-dependencies
mockall = { version = "=0.12.1" }

# manager dev-dependencies
mockito = { version = "=0.31.1", default-features = false }
predicates = { version = "=3.0.3" }
tempfile = { version = "3.14.0" }

# proxy dev-dependencies
assert-json-diff = { version = "2.0" }
http = { version = "=0.2.12" }
hyper = { version = "=0.14.31" }
tower-test = { version = "0.4.0" }

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 's'
overflow-checks = false
panic = "unwind"
rpath = false
