[workspace]
members = ["agent", "cli", "kbimg", "manager", "proxy"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MulanPSL-2.0"
version = "1.0.6"

[workspace.dependencies]
anyhow = { version = "1.0" }
assert-json-diff = { version = "2.0.2" }
async-trait = { version = "0.1" }
clap = { version = "=3.2.23", features = ["derive"] }
cli = { version = "1.0.6", path = "./cli" }
env_logger = { version = "0.9" }
futures = { version = "0.3.17" }
h2 = { version = "=0.3.16" }
http = { version = "0.2.9" }
hyper = { version = "0.14.25" }
jsonrpc = { version = "0.13", features = ["simple_uds"] }
jsonrpc-core = { version = "18.0" }
jsonrpc-derive = { version = "18.0" }
jsonrpc-ipc-server = { version = "18.0" }
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
kube = { version = "0.66.0", features = ["derive", "runtime"] }
lazy_static = { version = "1.4" }
log = { version = "= 0.4.15" }
manager = { version = "1.0.6", path = "./manager" }
mockall = { version = "=0.11.3" }
mockito = { version = "0.31.1", default-features = false }
nix = { version = "0.26.2" }
predicates = { version = "=2.0.1" }
regex = { version = "1.7.3" }
reqwest = { version = "=0.12.2", default-features = false }
schemars = { version = "=0.8.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10.8" }
socket2 = { version = "=0.4.9" }
sysinfo = { version = "=0.29.11" }
tempfile = { version = "3.6.0" }
thiserror = { version = "1.0.29" }
thread_local = { version = "=1.1.4" }
tokio = { version = "=1.28.0", default-features = false }
tokio-retry = { version = "0.3" }
toml = { version = "=0.7.6" }
tower-test = { version = "0.4.0" }

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 's'
overflow-checks = false
panic = "unwind"
rpath = false
