[package]
description = "KubeOS os-agent"
edition = "2021"
license = "MulanPSL-2.0"
name = "os-agent"
version = "1.0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0" }
env_logger = { version = "0.9" }
jsonrpc-core = { version = "18.0" }
jsonrpc-derive = { version = "18.0" }
jsonrpc-ipc-server = { version = "18.0" }
lazy_static = { version = "1.4" }
log = { version = "= 0.4.15" }
manager = { package = "manager", path = "../manager" }
nix = { version = "0.26.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
