[package]
description = "KubeOS os-agent"
edition.workspace = true
license.workspace = true
name = "os-agent"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-derive = { workspace = true }
jsonrpc-ipc-server = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
manager = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
