[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "KubeOS os-agent client"
license = "MulanPSL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kubeos-manager = { package = "manager", path = "../manager" }
jsonrpc = { version = "0.13", features = ["simple_uds"] }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
