[package]
description = "KubeOS os-agent client"
edition = "2021"
license = "MulanPSL-2.0"
name = "cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0" }
jsonrpc = { version = "0.13", features = ["simple_uds"] }
kubeos-manager = { package = "manager", path = "../manager" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
