[package]
description = "KubeOS os-agent client"
edition.workspace = true
license.workspace = true
name = "cli"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
jsonrpc = { workspace = true }
log = { workspace = true }
manager = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
