[package]
edition = "2021"
license = "MulanPSL-2.0"
name = "common"
version = "1.0.6"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1"
kube = { version = "0.66.0", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "=1.28.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-retry = "0.3"
schemars = "=0.8.10"