[package]
description = "KubeOS kbimg"
edition = "2021"
license = "MulanPSL-2.0"
name = "kbimg"
version = "1.0.6"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "=3.2.23", features = ["derive"] }
env_logger = { version = "0.9" }
log = { version = "= 0.4.15" }
regex = { version = "1.7.3" }
serde = { version = "1.0", features = ["derive"] }
sysinfo = { version = "=0.29.11" }
toml = { version = "=0.7.6" }
