[package]
description = "KubeOS kbimg"
edition.workspace = true
license.workspace = true
name = "kbimg"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
env_logger = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
