[package]
description = "CLI tool for generating various types of image for KubeOS"
edition.workspace = true
license.workspace = true
name = "kbimg"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
env_logger = { workspace = true }
fs2 = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
strfmt = { workspace = true }
toml = { workspace = true }
