[package]
description = "KubeOS os-agent manager"
edition.workspace = true
license.workspace = true
name = "manager"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
mockall = { workspace = true }
mockito = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "default", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
