[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
description  = "KubeOS os-proxy"
license      = "MulanPSL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.66.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
tokio = { version = "=1.14.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.44"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
env_logger = "0.9.0"
schemars = "=0.8.10"
socket2 = "=0.4.9"
log = "=0.4.15"
thread_local = "=1.1.4"
async-trait = "0.1"
regex = "=1.7.3"
chrono = { version = "0.4", default-features = false, features = ["std"] }
h2 = "=0.3.16"
tokio-retry = "0.3"
reqwest = { version = "=0.11.10", default-features = false, features =  [ "json" ] }
cli = { version = "0.1.0", path = "../cli" }
manager = { version = "0.1.0", path = "../manager" }
