[package]
description = "KubeOS os-proxy"
edition = "2021"
license = "MulanPSL-2.0"
name = "proxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
cli = { version = "0.1.0", path = "../cli" }
env_logger = "0.9.0"
futures = "0.3.17"
h2 = "=0.3.16"
k8s-openapi = { version = "0.13.1", features = ["v1_22"] }
kube = { version = "0.66.0", features = ["derive", "runtime"] }
log = "=0.4.15"
manager = { version = "0.1.0", path = "../manager" }
regex = "=1.7.3"
reqwest = { version = "=0.11.18", default-features = false, features = [
    "json",
] }
schemars = "=0.8.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
socket2 = "=0.4.9"
thiserror = "1.0.29"
thread_local = "=1.1.4"
tokio = { version = "=1.14.0", features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "0.2.9"
hyper = "0.14.25"
tower-test = "0.4.0"
mockall = { version = "=0.11.3" }
mockall_double = "0.2.1"
