[package]
description = "KubeOS os-proxy"
edition.workspace = true
license.workspace = true
name = "proxy"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "drain"
path = "src/drain.rs"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cli = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
h2 = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
log = { workspace = true }
manager = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
thread_local = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-retry = { workspace = true }

[dev-dependencies]
assert-json-diff = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
mockall = { workspace = true }
tower-test = { workspace = true }
